<resources>
    <string name="app_name">Classroom Bingo</string>
    <string name="action_settings">Settings</string>

    <!--String res for MainActivity-->
    <string name="game_type">Game Type*:</string>
    <string name="place">Place*:</string>
    <string name="primary_category">Primary Category*:</string>
    <string name="secondary_category">Secondary Category:</string>
    <string name="button_join">Join Game</string>
    <string name="button_create">Create Game</string>

    <!--String res for CreateGameFragment-->
    <string name="name">Name*:</string>
    <string name="date">Date*:</string>
    <string name="start">Start*:</string>
    <string name="duration">Duration in hours*:</string>
    <string name="name_hint">Game name</string>
    <string name="date_hint">yyyy/mm/dd</string>
    <string name="start_time_hint">hh:mm</string>
    <string name="duration_hint">Integer value in hours</string>

    <!--String res for JoinGameFragment-->
    <string name="placeholder">Placeholder</string>
    <string name="nickname">Nickname</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
