<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eu.steakholders.bingo.classroombingo.JoinGameFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:id="@+id/selected_game_name"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="109dp"
            android:textSize="30sp" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/nickname_input"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:hint="@string/nickname"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/button_join"
            android:id="@+id/join_game_button"
            android:layout_below="@+id/nickname_input"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="85dp"
            android:onClick="joinGame"/>
    </RelativeLayout>
</FrameLayout>
