<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/mainLayout">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_type"
        android:id="@+id/gtTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="35dp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place"
        android:id="@+id/pTextView"
        android:layout_below="@+id/gtTextView"
        android:layout_alignStart="@+id/gtTextView"
        android:layout_marginTop="40dp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/primary_category"
        android:id="@+id/pcTextView"
        android:layout_below="@+id/pTextView"
        android:layout_alignStart="@+id/pTextView"
        android:layout_marginTop="45dp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secondary_category"
        android:id="@+id/scTextView"
        android:layout_below="@+id/pcTextView"
        android:layout_alignStart="@+id/pcTextView"
        android:layout_marginTop="40dp"
        android:textSize="16sp" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/spinnerLayout">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:id="@+id/spinner_gt"
            android:spinnerMode="dropdown" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:id="@+id/spinner_place"
            android:spinnerMode="dropdown"
           />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:id="@+id/spinner_pc"
            android:spinnerMode="dropdown"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:id="@+id/spinner_sc"
            android:spinnerMode="dropdown"
           />

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:id="@+id/existingGameList"
        android:layout_below="@+id/spinnerLayout"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:choiceMode="singleChoice"
        android:listSelector="@color/colorPrimary" />

</RelativeLayout>